remonter langue dans client - faire apparaitre langue et contact dans documents - amelioration disposition infos dans documetns

--- a/app/views/admin/clients/_client.html.erb
+++ b/app/views/admin/clients/_client.html.erb
@@ -36,7 +36,7 @@
         <%= field_with_label("ville: ", client.ville)  %>
         <%= field_with_label("pays: ", client.pays)  %>
         <%= field_with_label("contact: ", client.contact)  %>
-        <%= field_with_label("langue: ", client.language)  %>
+        <%= field_with_label("langue: ", client.language_label)  %>
 
       </div>
 
