--- a/app/views/admin/clients/_form.html.erb
+++ b/app/views/admin/clients/_form.html.erb
@@ -15,17 +15,24 @@
         </div>
       <% end %>
 
+      <div class="input-group px-1 mb-1">
+        <%= form.label :language, "Language", class: "input-group-text" %>
+        <%= form.select :language, 
+          [['Français', 'fr'], ['Anglais', 'en']], 
+          { include_blank: '', selected: form.object.language || 'fr' }, 
+          class: "form-select" %>
+      </div>
 
       <%= custom_form_elements(form, 
-        [:prenom, :text_field], [:nom, :text_field]
+        [:prenom, :text_field], [:nom, :text_field, "Nom / Société"]
       ) %>
 
-      <div class="input-group px-2 mb-1">
+      <div class="input-group px-1 mb-1">
         <%= form.label :propart, "Pro / Particulier", class: "input-group-text" %>
         <%= form.select :propart, Client::PROPART_OPTIONS, { include_blank: '' }, class: "form-select" %>
       </div>
 
-      <div class="input-group px-2 mb-1">
+      <div class="input-group px-1 mb-1">
         <%= form.label :intitule, class: "input-group-text" %>
         <%= form.select :intitule, Client::INTITULE_OPTIONS, { include_blank: '' }, class: "form-select" %>
       </div>
@@ -36,14 +43,6 @@
         [:mail, :text_field], [:mail2, :text_field], [:adresse, :text_field],
         [:cp, :text_field], [:ville, :text_field], [:pays, :text_field], [:contact, :text_field]
       ) %>
-
-      <div class="input-group px-2 mb-1">
-        <%= form.label :language, "Language", class: "input-group-text" %>
-        <%= form.select :language, 
-          [['Français', 'fr'], ['Anglais', 'en']], 
-          { include_blank: '', selected: form.object.language || 'fr' }, 
-          class: "form-select" %>
-      </div>
 
       <%= custom_submit_button(form) %>
 
