--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -32,6 +32,8 @@
       <%= yield %>
     </div>
     
+      <%= render "public/chat/conversation" %>
+
     <footer>
       <%= render "public/shared/footer" %>
     </footer>
