search tel et mail clients

--- a/app/views/admin/clients/index.html.erb
+++ b/app/views/admin/clients/index.html.erb
@@ -1,5 +1,5 @@
 <%= bandeau_entete("Clients", "person", @count_clients, 
-        :nom_or_prenom_cont, admin_clients_path) %>
+        :nom_or_prenom_or_tel_or_tel2_or_mail_or_mail2_cont, admin_clients_path) %>
 
 <%= bloc_nouveau(Client) %>
 
