adding stats by profil

--- a/app/views/admin/profiles/index.html.erb
+++ b/app/views/admin/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Profiles", "person-check", @profiles.count, :nom_or_prenom_cont, admin_profiles_path) %>
+<%= bandeau_entete("Profils", "person-check", @profiles.count, :nom_or_prenom_cont, admin_profiles_path) %>
 
 <%= bloc_nouveau(Profile) %>
 
