--- a/app/views/admin/analyses/index.html.erb
+++ b/app/views/admin/analyses/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Ventes", "graph-up-arrow", "", "", "") %>
+<%= bandeau_entete("Analyses", "graph-up-arrow", "", "", "") %>
 
 <% q_params = params[:q].respond_to?(:to_unsafe_h) ? params[:q].to_unsafe_h : params[:q] %>
 <% base_params = params.permit(:sort, :filter_mode, :filter_taille, :filter_couleur, :filter_categorie, :filter_statut).to_h.merge(q: q_params) %>
@@ -62,9 +62,12 @@
   </div>
 </div>
 
-    
-<%= render_dashboard_section("Commandes", ["chartPieCommandes", "chartBarCommandes", "chartLineCommandes"]) %>
-<%= render_dashboard_section("Articles", ["chartPieArticles", "chartBarArticles", "chartLineArticles"]) %>
-<%= render_dashboard_section("Transactions", ["chartPieTransactions", "chartBarTransactions", "chartLineTransactions"]) %>
-<%= render_dashboard_section("Chiffre d'affaires", ["chartPieCa", "chartBarCa", "chartLineCa"]) %>
+
+<%= render_dashboard_section("Profiles", "bi bi-people-fill", ["chartBarCommandesProfiles"]) %>
+
+
+<%= render_dashboard_section("Commandes", "bi bi-file-earmark-fill", ["chartPieCommandes", "chartBarCommandes", "chartLineCommandes"]) %>
+<%= render_dashboard_section("Articles", "bi bi-person-standing-dress", ["chartPieArticles", "chartBarArticles", "chartLineArticles"]) %>
+<%= render_dashboard_section("Transactions", "bi bi-arrow-left-right", ["chartPieTransactions", "chartBarTransactions", "chartLineTransactions"]) %>
+<%= render_dashboard_section("Chiffre d'affaires", "bi bi-cash", ["chartPieCa", "chartBarCa", "chartLineCa"]) %>
 
