--- a/app/views/admin/home_admin/_blocLarge.html.erb
+++ b/app/views/admin/home_admin/_blocLarge.html.erb
@@ -17,7 +17,7 @@
 
     <div class= "card-body p-2 light-beige-colored text-center gap-2">
         <%= options_supplementaires_link(admin_users_path, "bi-person-circle", "Comptes", "btn-outline-primary") if current_admin_user.admin? %>
-        <%= options_supplementaires_link(admin_profiles_path, "bi-person-check", "Profiles", "btn-outline-dark") if current_admin_user.admin? %>
+        <%= options_supplementaires_link(admin_profiles_path, "bi-person-check", "Profils", "btn-outline-dark") if current_admin_user.admin? %>
         <%= options_supplementaires_link(admin_textes_path, "bi-flag", "Marketing", "btn-outline-warning") if current_admin_user.admin? %>
 
         <%= options_supplementaires_link(admin_analyses_index_path(debut: Date.today, fin: Date.today), "bi-graph-up-arrow", "Analyses", "btn-outline-success") %>
