--- a/app/views/admin/analyses/index.html.erb
+++ b/app/views/admin/analyses/index.html.erb
@@ -63,7 +63,7 @@
 </div>
 
 
-<%= render_dashboard_section("Profiles", "bi bi-people-fill", ["chartBarCommandesProfiles"]) %>
+<%= render_dashboard_section("Profiles", "bi bi-people-fill", ["chartPieCommandesProfiles", "chartBarCaProfiles", "chartLineCaProfiles"]) %>
 
 
 <%= render_dashboard_section("Commandes", "bi bi-file-earmark-fill", ["chartPieCommandes", "chartBarCommandes", "chartLineCommandes"]) %>
