--- a/app/views/admin/analyses/_chartPieCa.html.erb
+++ b/app/views/admin/analyses/_chartPieCa.html.erb
@@ -6,10 +6,11 @@
   <% @data = [@totalPrixCaCb, @totalPrixCaEspeces, @totalPrixCaCheque, @totalPrixCaVirement] %>
 
 <script>
-  var couleur1 = 'rgb(20, 63, 169)';
-  var couleur2 = 'rgb(20, 169, 74)';
-  var couleur3 = 'rgb(160, 155, 155)';
-  var couleur4 = 'rgb(251, 247, 39)';
+  var couleur1 = 'rgb(30, 90, 180)';   // bleu doux
+  var couleur2 = 'rgb(40, 170, 120)';  // vert menthe
+  var couleur3 = 'rgb(140, 140, 140)'; // gris chaud
+  var couleur4 = 'rgb(255, 200, 60)';  // jaune doré
+
 
   var nbTotalPaiements = <%= @totalPrixCa %>;
 
