complete charts profiles

--- a/app/views/admin/analyses/_chartBarDevisProfiles.html.erb
+++ b/app/views/admin/analyses/_chartBarDevisProfiles.html.erb
@@ -42,7 +42,7 @@
                     const label = context.dataset.label || '';
                     const value = context.parsed.y;
                     const profil = context.label;
-                    return `${value} rdv`;
+                    return `${value} devis`;
                 }
                 }
             }
