--- a/app/views/admin/analyses/_chartLineCaProfiles.html.erb
+++ b/app/views/admin/analyses/_chartLineCaProfiles.html.erb
@@ -34,7 +34,7 @@
         },
         plugins: {
           legend: {
-            display: true,
+            display: false,
             position: 'bottom'
           },
           title: {
