chartline profil transformé en chartbar

--- a/app/views/admin/analyses/index.html.erb
+++ b/app/views/admin/analyses/index.html.erb
@@ -63,8 +63,7 @@
 </div>
 
 
-<%= render_dashboard_section("Profiles", "bi bi-people-fill", ["chartPieCommandesProfiles", "chartBarDevisProfiles", "chartLineCaProfiles"]) %>
-
+<%= render_dashboard_section("Profiles", "bi bi-people-fill", ["chartPieCommandesProfiles", "chartBarDevisProfiles", "chartBarCaProfiles"]) %>
 
 <%= render_dashboard_section("Commandes", "bi bi-file-earmark-fill", ["chartPieCommandes", "chartBarCommandes", "chartLineCommandes"]) %>
 <%= render_dashboard_section("Articles", "bi bi-person-standing-dress", ["chartPieArticles", "chartBarArticles", "chartLineArticles"]) %>
