--- a/app/views/admin/paiement_recus/_paiement_recu.html.erb
+++ b/app/views/admin/paiement_recus/_paiement_recu.html.erb
@@ -6,7 +6,7 @@
 
       <div class="col">
         <strong> <%= paiement_recu.typepaiement %> </strong>
-        <%= custom_currency_no_decimals_format(paiement_recu.montant) %>
+        <%= custom_currency_format(paiement_recu.montant) %>
         <%= "par #{paiement_recu.moyen}" if paiement_recu.moyen.present? %>
         <%= "le #{paiement_recu.custom_date.strftime("%d/%m/%Y")}" if paiement_recu.custom_date.present? %>
 
