ux qr code selection article

--- a/app/views/admin/home_admin/selection_qr.html.erb
+++ b/app/views/admin/home_admin/selection_qr.html.erb
@@ -1,5 +1,11 @@
+
+<%# a priori sert a scanner qr code commande %>
+
+
 <div data-controller="qr-code">
   <div class="container-fluid p-2"> 
+
+
 
     <div class="container d-flex justify-content-center align-items-center">
       <div class="m-2" id="sourceSelectPanel">
@@ -13,7 +19,7 @@
       <video id="video" style="width: 100%; max-width: 600px; height: auto;"></video>
     </div>
 
-    <!-- 🔍 Champ douchette -->
+    <!--🔍 Champ douchette-->
     <div class="text-center mt-3">
       <input
         type="text"
