--- a/app/views/admin/selection_produit/_selection_manuelle.html.erb
+++ b/app/views/admin/selection_produit/_selection_manuelle.html.erb
@@ -1,5 +1,9 @@
+<% unless display_qr_activated %>
+  <p>QR display n'est pas activé.</p>
+<% end %>
 
 <div class="text-center fw-bold">catégories</div> <hr>
+
 
 <div class="d-flex flex-wrap justify-content-center align-items-center mb-3">
 
