--- a/app/views/admin/selection_produit/index.html.erb
+++ b/app/views/admin/selection_produit/index.html.erb
@@ -46,10 +46,22 @@
       <% end %>
     </div>
 
+
+  <%# tester ajout partial seleciton qr  %>
+  <%#= render  "selection_qr" %>
+
+  <%# <% if session[:display_qr_activated] == true %>
+      <%#= render "selection_qr" %>  
+  <%# end %>
+
+
+
+
   <% end %>
 
   <div id="partial-container" class="partial-topic">
     <%# recoit le turbo stream avec elements cliqués %>
+
     <% if @produit.present? %>
       <%= render @produit %>
 
@@ -60,13 +72,47 @@
         <%= render partial: 'admin/articles/form', 
             locals: { commande_id: @commande.id, produit_id: @produit.id, article: Article.new } %>
       <% end %>
-      
+
+    <% else %>
+
+      <% if session[:display_qr_activated] == true  %>
+        <%= render 'admin/selection_produit/selection_qr', display_qr_activated: nil %>
+      <% end %>
+
     <% end %>
   </div>
 
 </div>
 
 <%= render 'ensemble_applicable' %>
+
+
+<%# ajout du 0508 pour avoir tout le temps douchette
+continuer tester, si ok enlever le champ douchette de selection qr pour ajout article ?
+erreur log en js vient de absence de camero donc ok 
+verifier sous article
+verifier commande
+verifier avec qr code camera toujours ok 
+puis prod
+ %>
+
+<%# if  params[:produit].nil? %>
+  <!--div data-controller="qr-code-ajout-article" class="container text-center mt-3">
+    <input
+      type="text"
+      id="scannerInput"
+      class="form-control text-center"
+      style="max-width: 400px; margin: 0 auto;"
+      placeholder="Scannez un QR code avec la douchette"
+      data-action="change->qr-code-ajout-article#handleScannerInput"
+      autofocus
+    />
+
+    <input type="hidden" id="produit" name="produit">
+    <div id="results" class="mt-2"></div>
+  </div-->
+  
+<%# end %>
 
 
 <br> <br>
