fix caution on ensemble

--- a/app/views/admin/selection_produit/_selection_manuelle.html.erb
+++ b/app/views/admin/selection_produit/_selection_manuelle.html.erb
@@ -7,7 +7,7 @@
       class: "btn btn-sm btn-outline-primary m-1 btn-topic",
       data: { controller: "button-color", action: "click->button-color#handleClick" },
       "data-original-color": "text-primary" do %>
-      <span class="ms-1 fw-bold">Tout</span>
+      <span class="fw-bold">Tout</span>
   <% end %>
 
   <% @categorie_produits.each do |categorie_produit| %>
