changes for new site public

--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -26,10 +26,18 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav me-auto my-2 my-lg-0">
         <%= nav_link_public(home_path, "Accueil") %>
-        <%= nav_link_public(produits_index_url, "Produits") %>
-        <%= nav_link_public(categories_url, "Catégories") %>
         <%= nav_link_public(laboutique_url, "La boutique de Cannes") %>
-        <%= nav_link_public(contact_url, "Contact") %>
+        <%= nav_link_public(laboutique_url, "La boutique en ligne") %>
+        <%= nav_link_public(laboutique_url, "Nos collections") %>
+        <%= nav_link_public(laboutique_url, "Le concept") %>
+        <%= nav_link_public(laboutique_url, "Nos autres activités") %>
+        <%= nav_link_public(laboutique_url, "Légal") %>
+        <%= nav_link_public(laboutique_url, "FAQ") %>
+
+        <%#= nav_link_public(produits_index_url, "Produits") %>
+        <%#= nav_link_public(categories_url, "Catégories") %>
+        <%#= nav_link_public(laboutique_url, "La boutique de Cannes") %>
+        <%#= nav_link_public(contact_url, "Contact") %>
       </ul>
     </div>
   </div>
