--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -1,3 +1,5 @@
+<%= page_header("La boutique de Cannes", "Découvrez notre équipe et notre boutique") %>
+
 <div class="public-main-content">
 
     <div class="container-fluid">
