--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -1,68 +1,2 @@
-<div class="position-relative d-inline-block text-center w-100" data-aos="fade">
-  <%= render  "main_carousel" %>
-  <%#= image_tag('/images/img1.png', class: "w-100", style: "object-fit: cover; height: 400px;") %>
 
-  <div class="container-fluid d-flex flex-column justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
-    <h1 class="public-text-overlay brand-colored fs-1 mb-2 text-uppercase">
-      Notre boutique en ligne
-    </h1>
-    <h2 class="public-text-overlay fs-6">
-      Découvrez une sélection de nos produits
-    </h2>
-  </div>
-</div>
-
-<div class="public-main-content">
-
-  <div class="container-fluid my-4" data-aos="fade">
-    <h3 class="brand-colored"> Notre sélection </h3>
-    <div>
-        Autour D'un Soir c'est avant tout une boutique 100% conseil à Cannes.
-        Nous souhaitons ici vous proposer le meilleur de nos produits à la vente.
-    </div>
-  </div>
-
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2 p-2 m-0">
-    <% @categories.each do |categorie| %>
-      <div class="col" data-aos="fade">
-        <%= card_categorie(categorie) %>
-      </div>
-    <% end %>
-  </div>
-
-  <div class="container-fluid my-4" data-aos="fade">
-    <h3 class="brand-colored"> Autour d'un Soir </h3>
-    <div>
-      Notre enseigne existe depuis 1980 ! 
-      Depuis toujours notre ambition est de proposer des produits de qualité pour tous vos événements.
-      Entreprise familiale, notre boutique est à Cannes et bien connue pour ses bons conseils. 
-      Aussi n'hésitez pas à nous contacter par mail ou téléphone en cas de questions sur un produit.  
-    </div>
-  </div>
-
-  <div data-aos="fade">
-    <%= image_tag('/images/party.jpg', class: "w-100 p-2", style: "object-fit: cover; height: 400px;") %>
-  </div>
-
-  <div class="container text-center">
-    <div class="d-flex flex-column align-items-center mb-4" data-aos="fade">
-      <i class="bi bi-truck m-0 p-0" style="font-size: 80px; vertical-align: middle; line-height: 1;"></i>
-      <div class="brand-colored m-0 fs-3">Livraison rapide</div>
-      <div class="text-secondary text-uppercase fs-6">sous 7 jours en france</div>
-    </div>
-
-    <div class="d-flex flex-column align-items-center mb-4" data-aos="fade">
-      <i class="bi bi-hand-thumbs-up m-0 p-0" style="font-size: 80px; vertical-align: middle; line-height: 1;"></i>
-      <div class="brand-colored m-0 fs-3">Retour possible</div>
-      <div class="text-secondary text-uppercase fs-6">sous 14 jours</div>
-    </div>
-
-    <div class="d-flex flex-column align-items-center mb-4" data-aos="fade">
-      <i class="bi bi-credit-card m-0 p-0" style="font-size: 80px; vertical-align: middle; line-height: 1;"></i>
-      <div class="brand-colored m-0 fs-3">Paiement sécurisé</div>
-      <div class="text-secondary text-uppercase fs-6">votre shopping en toute tranquilité</div>
-    </div>
-
-  </div>
-
-</div>
+<%= page_header("Page d'accueil", "visuel avec animation sympa et liens vers les différentes pages") %>
